<resources>
    <string name="app_name">Marketplace</string>
    <string name="fire_base">FireBase</string>
    <string name="fire_base_message">Full Firebase integration</string>
    <string name="go_markerplace">GoMarkerplace</string>
    <string name="test_login">Login</string>
    <string name="test_username">Email</string>
    <string name="test_password">Password</string>
    <string name="test_userExample">example@domain.com</string>
    <string name="test_passwordExample">Your Password</string>
    <string name="test_register">Register</string>
    <string name="test_provider">Provider</string>
    <string name="test_signoff">Close</string>
    <string name="test_welcome">Welcome</string>
    <string name="test_errorlogin">Invalid email or password</string>
    <string name="test_errorAuth">Failed to authenticate</string>
    <string name="test_Home">Home</string>
    <string name="test_Return">Return</string>
    <string name="test_Name">Name</string>
    <string name="test_NameExample">Your Name</string>
    <string name="test_LastName">Last Name</string>
    <string name="test_LastNameExample">Your Last Name</string>
    <string name="test_Mobile">Mobile</string>
    <string name="test_MobileExample">311111111</string>
    <string name="test_Terms">Accept terms and conditions</string>
    <string name="test_EmptyMail">Empty email</string>
    <string name="test_EmptyPassword">Empty password</string>
    <string name="test_EmptyName">Empty name</string>
    <string name="test_EmptyLastName">Empty last name</string>
    <string name="test_EmptyMobile">Empty mobile</string>
    <string name="test_FalseTerms">Terms must be confirmed</string>
    <string name="test_ValidateError">Validate error</string>
    <string name="test_lowercase">At least one lowercase</string>
    <string name="test_minimum8">Minimum 8 characters</string>
    <string name="test_uppercase">At least one uppercase</string>
    <string name="test_digit">At least one number</string>
    <string name="test_character">At least one character</string>
    <string name="test_emailerror">It is not an email</string>
    <string name="test_TermsLink">Terms and conditions</string>
    <string name="test_TermsMessage">Accept all policies, security and terms when registering.</string>
    <string name="test_ok">Accept</string>
    <string name="test_cancel">Cancel</string>
    <string name="test_search">Search</string>
    <string name="test_All">All</string>
    <string name="test_Category">Category</string>
    <string name="test_Seller">Seller</string>
    <string name="test_description">Description</string>
    <string name="test_Comments">Comments</string>
    <string name="test_stars">Stars</string>
    <string name="test_total">Total </string>
    <string name="test_buy">Buy</string>
    <string name="menu_Order">Order</string>
    <string name="test_RecoveryQuestion">¿Have you forgotten your password?</string>
    <string name="test_Recovery">Recovery</string>
    <string name="test_Maps">Maps</string>

    <string name="car_file" translatable="false">com.example.marketplace.CAR_FILE_KEY</string>
    <string name="preds_file" translatable="false">com.example.marketplace.PREFERECE_FILE_KEY</string>
    <string name="default_web_client_id2" translatable="false">1017434080370-slqfef8v4jf8i7ks6dd1gp1ibhsp3ac3.apps.googleusercontent.com</string>
    <string name="facebook_app_id" translatable="false">231283592404544</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb231283592404544</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>

    <string name="menu_home">Products</string>
    <string name="menu_gallery">Car</string>
    <string name="menu_slideshow">Orders</string>
    <string name="menu_product">Product</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>




