<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:id="@+id/loginLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icon2"
            android:background="@drawable/customborder"
            android:layout_margin="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/riberio"
            android:text="@string/test_username"
            android:textColor="@color/blue_700"
            android:textSize="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/test_userExample">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/riberio"
            android:text="@string/test_password"
            android:textColor="@color/blue_700"
            android:textSize="20dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/test_passwordExample"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onLogin"
                android:text="@string/test_login"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/green_200"
                android:onClick="onRegister"
                android:text="@string/test_register"
                android:layout_marginLeft="5dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnGoogle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/google"
                android:gravity="center_horizontal|top"
                android:onClick="googleLogin"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/facebook"
                android:gravity="center_horizontal|top"
                android:onClick="facebookLogin"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnMaps"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/maps"
                android:gravity="center_horizontal|top"
                android:onClick="onMaps"
                tools:ignore="SpeakableTextPresentCheck"  />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/recovery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRecovery"
                android:gravity="center"
                android:padding="20px"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/test_RecoveryQuestion"
                android:linksClickable="true"
                android:backgroundTint="@android:color/transparent"
                android:textColor="@color/blue_200" />


        </LinearLayout>


    </LinearLayout>

</LinearLayout>